--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 coat_geonode.egg-info/
 *.pyc
+*.local_settings.py
 .vagrant
 ubuntu-xenial-16.04-cloudimg-console.log
 coat_geonode/local_settings.py
